--- a/app/index.html
+++ b/app/index.html
@@ -61,21 +61,51 @@
         <!-- nav end -->
         <!-- slider start -->
         <section class="section-slider">
-            <div class="slider">
-                <div class="slide">
-                    <div class="container">
-                        <div class="text-center">
-                            <h1>Creative <span>Design Agency</span></h1>
-                            <p class="">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
-                        </div>
-                    </div>
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+              </ol>
+             <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <img src="img/slider.jpg" alt="">
+                  <div class="carousel-caption">
+                    <h1>Creative <span>Design Agency</span></h1>
+                    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+                  </div>
                 </div>
+                <div class="item">
+                  <img src="img/slider.jpg" alt="">
+                  <div class="carousel-caption">
+                    <h1>Creative <span>Design Agency</span> 2</h1>
+                    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="img/slider.jpg" alt="">
+                  <div class="carousel-caption">
+                    <h1>Creative <span>Design Agency</span> 3</h1>
+                    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+                  </div>
+                </div>
+            </div>
+                  <!-- Controls -->
+                  <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                    <i class="fa fa-angle-left" aria-hidden="true"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
             </div>
         </section>
         <!-- slider and -->
+
     </div>
-    <script src="js/main.js"></script>
     <script src='bower/jquery/dist/jquery.min.js'></script>
+    <script src="js/main.js"></script>
     <script src='bower/bootstrap/dist/js/bootstrap.min.js'></script>
 </body>
 </html>
