--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,78 @@
             </div>
         </section>
         <!-- slider and -->
-
+        <!-- section about -->
+        <section class="section-page section-about">
+            <div class="container">
+                <div class="row">
+                    <h2 class="title-section">Why <span>Choose Us</span></h2>
+                    <p class="dec-section">Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis. <br> Nullam at scelerisque tellus mattis volutpat rhoncus, </p>
+                    <div class="list-about">
+                        <div class="col-md-2">
+                            <div class="item">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                <h3>your title</h3>
+                                <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis  </p>
+                                <div class="show-about">
+                                    <a class="more" href="#">see more</a>
+                                    <a href="#" class="con"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#" class="con"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="item">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                <h3>your title</h3>
+                                <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis  </p>
+                                <div class="show-about">
+                                    <a class="more" href="#">see more</a>
+                                    <a href="#" class="con"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#" class="con"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="item">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                <h3>your title</h3>
+                                <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis  </p>
+                                <div class="show-about">
+                                    <a class="more" href="#">see more</a>
+                                    <a href="#" class="con"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#" class="con"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="item">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                <h3>your title</h3>
+                                <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis  </p>
+                                <div class="show-about">
+                                    <a class="more" href="#">see more</a>
+                                    <a href="#" class="con"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#" class="con"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="item">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                <h3>your title</h3>
+                                <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis  </p>
+                                <div class="show-about">
+                                    <a class="more" href="#">see more</a>
+                                    <a href="#" class="con"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#" class="con"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- section about end-->
     </div>
     <script src='bower/jquery/dist/jquery.min.js'></script>
     <script src="js/main.js"></script>
