--- a/app/index.html
+++ b/app/index.html
@@ -174,6 +174,208 @@
             </div>
         </section>
         <!-- section about end-->
+        <!-- section our product -->
+        <section class="section-page section-product">
+            <h2 class="title-section">our <span>products</span></h2>
+            <div class="container">
+                <div class="row">
+                     <div id="carousel-1" class="carousel-1 slide" data-ride="carousel-1">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carousel-1" data-slide-to="1" class="active"></li>
+                        <li data-target="#carousel-1" data-slide-to="2"></li>
+                        <li data-target="#carousel-1" data-slide-to="3"></li>
+                      </ol>
+                     <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                <div class="wrap-img">
+                                    <img src="img/product.png" alt="">
+                                </div>
+                                <h3>Title</h3>
+                                <a href="#">Best Product</a>
+                                <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="col-md-4">
+                                 <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="col-md-4">
+                                 <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="product-item">
+                                    <div class="wrap-img">
+                                        <img src="img/product.png" alt="">
+                                    </div>
+                                    <h3>Title</h3>
+                                    <a href="#">Best Product</a>
+                                    <p>Duis bibendum diam non erat facilaisis en ter tincidunt</p>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+        <!-- section our product end-->
     </div>
     <script src='bower/jquery/dist/jquery.min.js'></script>
     <script src="js/main.js"></script>
